changed theme, fixed button spacing

--- a/_sass/basically-basic/_intro.scss
+++ b/_sass/basically-basic/_intro.scss
@@ -32,6 +32,14 @@
 
 .intro-text {
 
+  .intro-actions {
+    li {
+      padding: 1rem 1rem 0 1rem;
+    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   /* remove space after last child element */
   > *:last-child {
     margin-bottom: 0;
